# SqliteGIS

./: # Github Copilot Prompt conversation.ini  .gitignore  readme.md
Driver/: CMakeLists.txt  readme.md
Driver/include/: ogrsqlitegisdriver.h  ogrsqlitegisgdatasource.h  ogrsqlitegisgislayer.h
Driver/src/: ogrsqlitegisdriver.cpp  ogrsqlitegisgdatasource.cpp  ogrsqlitegisgislayer.cpp
Workspace/: CMakeLists.txt  readme.md  test_basic.sql
Workspace/.github/: copilot-instructions.md
Workspace/docs/: implementation_plan.md  phase1_summary.md  phase2_plan.md  phase2_summary.md  phase3_plan.md  phase3_summary.md  phase4_plan.md  phase4_summary.md  phase5_plan.md  phase5_summary.md  phase6_plan.md  phase6_summary.md  specification.md
Workspace/include/sqlitegis/: geometry_accessors.hpp  geometry_aggregates.hpp  geometry_bbox.hpp  geometry_constructors.hpp  geometry_functions.hpp  geometry_measures.hpp  geometry_operations.hpp  geometry_relations.hpp  geometry_transform.hpp  geometry_types.hpp  geometry_utils.hpp
Workspace/src/: geometry_accessors.cpp  geometry_aggregates.cpp  geometry_bbox.cpp  geometry_constructors.cpp  geometry_functions.cpp  geometry_measures.cpp  geometry_operations.cpp  geometry_relations.cpp  geometry_transform.cpp  geometry_types.cpp  geometry_utils.cpp  sqlitegis_extension.cpp
Workspace/tests/: README.md  run_core_tests.ps1  run_tests.ps1  run_tests.sh  test_3d.sql  test_accessors.sql  test_aggregates.sql  test_constructors.sql  test_measures.sql  test_operations.sql  test_relations.sql  test_wkb.sql
